Fixed line wrap issue on button

--- a/components/Metronome/Metronome.module.scss
+++ b/components/Metronome/Metronome.module.scss
@@ -30,6 +30,7 @@
 
 .tempo {
   width: 6rem;
+  white-space: nowrap;
 }
 
 .button {
